--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,6 +56,11 @@
         <div class="col-sm-2">
           <% if user_signed_in? %>
           <h5>Hkiya rooms</h5>
+          <ul>
+            <% current_user.chatrooms.each do |chatroom| %>
+            <li><%= link_to(chatroom.name, '#') %></li>
+            <% end %>
+          </ul>
           <% end %>
         </div>
         <div class="col-sm-10">
