--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,9 +1,19 @@
-<p id="notice"><%= notice %></p>
+
 
 <p>
   <strong>Name:</strong>
   <%= @chatroom.name %>
 </p>
+<div data-behaviour= 'messages'>
+  <% @chatroom.messages.limit(100).each do |message| %>
+  <div><strong><%= message.user.usrname %>:</strong><%= message.body %></div>
+  <% end %>
 
-<%= link_to 'Edit', edit_chatroom_path(@chatroom) %> |
-<%= link_to 'Back', chatrooms_path %>
+</div>
+<%= form_for [@chatroom, Message.new] do |f| %>
+<%= f.text_area :body, row: 1, class: "form-control", autofocus: true %>
+<%= f.submit"SEND"%>
+<% end %>
+
+
+
