--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>Hkiya</title>
-    <%= csrf_meta_tags %>
+    <%= csrf_meta_tags %> 
     <%= csp_meta_tag %>
+    <link href="https://fonts.googleapis.com/css?family=Eagle+Lake" rel="stylesheet">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -21,7 +22,7 @@
             <span class="icon-bar"></span>
           </button>
           <%= link_to root_path, class: "navbar-brand" do %>
-            Chat
+            <em>Hkeya!</em>
           <% end %>
         </div>
 
