--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,19 +1,18 @@
-
-
 <p>
   <strong>Name:</strong>
   <%= @chatroom.name %>
 </p>
-<div data-behaviour= 'messages'>
-  <% @chatroom.messages.limit(100).each do |message| %>
-  <div><strong><%= message.user.usrname %>:</strong><%= message.body %></div>
+<div data-behavior= 'messages' data-chatroom-id='<%= @chatroom.id %>'>
+  <% @chatroom.messages.sift.each do |message| %>
+  <%= render(message) %>  
   <% end %>
-
 </div>
-<%= form_for [@chatroom, Message.new] do |f| %>
+
+<%= form_for [@chatroom, Message.new], remote: true do |f| %>
 <%= f.text_area :body, row: 1, class: "form-control", autofocus: true %>
 <%= f.submit"SEND"%>
 <% end %>
 
 
-
+<!-- This remote is true comes with railsujs handels js request 
+  render(:partial => 'form', :locals => {:f => f})%>  --> 
